[package]
name = "dsjant"
version = "0.0.2"
description = "Daily Story Journal Assistant"
authors = ["TANG HUI(David) <david921518@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dsjant_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "lib"
]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.1", features = [ "macos-private-api" ] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-window-state = "2.0.1"
serde = { version = "1", features = ["derive"] }
serdeconv = "0.4.1"
serde_json = "1.0.117"
tauri-plugin-fs = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-os = "2.0.0"
# tauri-plugin-system-info = "2.0.2"
# tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.0.0"
# tauri-plugin-devtools = "2.0.0"
cfg-if = "1.0.0"
qapi = { version = "0.14", features = ["qmp", "qga", "async-tokio-all"] }
url = "2.5.2"
sysinfo = "0.30.13"
tauri-plugin-http = "2.0.0"

tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-system-info = "2.0.2"

[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-system-info = "2.0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-system-info = "2.0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2.0.0", features = ["rustls-tls"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# Optimize for smaller binary size
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
